# dtam_thesis

./: README.md  todo.txt
blender_scenes/python_scripts/: create_cameras_in_scene.py  loadstate.py  script.py  script_backup.py
matlab_scripts/: Copy_of_algorithm.m  Copy_of_algorithm_withdata.m  Gaussblur.m  algorithm.m  algorithm_withdata.m  algorithm_withdata.m~  get1stDepthWithUV.m  test.m  test.m~
pathtrace/: readme.html  readme.md  yocto_pathtrace.cpp
pathtrace/__MACOSX/: ._out
pathtrace/apps/ysceneitraces/: ysceneitraces.cpp
pathtrace/apps/yscenetrace/: yscenetrace.cpp
pathtrace/libs/yocto/: yocto_sceneio.h
pathtrace/libs/yocto_pathtrace/: yocto_pathtrace.cpp  yocto_pathtrace.h
pathtrace/scenes/: script.py
pathtrace/scenes/bunny_scene/: bunny_scene.json
pathtrace/scenes/bunny_scene/shapes/: Cone.ply  floor.ply  light_1.ply  light_2.ply  wall1.ply
pathtrace/scenes/bunny_scene_blender/bunny_scene/: bunny_scene.json
pathtrace/scenes/bunny_scene_blender/bunny_scene/shapes/: light_1.ply
pathtrace/scenes/python_scripts/: create_cameras_in_scene.py  script.py
pathtrace/scenes/yocto_dataset/bunny_scene/: bunny_scene.json
pathtrace/scenes/yocto_dataset/bunny_scene/shapes/: Cone.ply  ceiling.ply  floor.ply  light_1.ply  light_2.ply  wall1.ply  wall2.ply  wall3.ply
pathtrace/scripts/: make_dataset.sh  run-highres.sh  run.sh
prova_dr/: CMakeLists.txt  README.md  isthisgoof_zip.exr  todo.txt
prova_dr/dataset/bunny_scene/: bunny_scene.json  depth_Camera0000.exr  depth_Camera0001.exr  depth_Camera0002.exr  depth_Camera0003.exr  depth_Camera0004.exr  depth_Camera0005.exr  depth_Camera0006.exr  depth_Camera0007.exr  depth_Camera0008.exr  depth_Camera0009.exr  depth_Camera0010.exr  depth_Camera0011.exr  depth_Camera0012.exr  depth_Camera0013.exr  depth_Camera0014.exr  depth_Camera0015.exr  depth_Camera0016.exr  depth_Camera0017.exr  depth_Camera0018.exr  depth_Camera0019.exr  depth_Camera0020.exr  depth_Camera0021.exr  depth_Camera0022.exr  depth_Camera0023.exr  depth_Camera0024.exr  depth_Camera0025.exr  depth_Camera0026.exr  depth_Camera0027.exr  depth_Camera0028.exr  depth_Camera0029.exr  depth_Camera0030.exr  depth_Camera0031.exr  depth_Camera0032.exr  depth_Camera0033.exr  depth_Camera0034.exr  depth_Camera0035.exr  depth_Camera0036.exr  depth_Camera0037.exr  depth_Camera0038.exr  (+61 more)
prova_dr/dataset/bunny_scene (copy)/: bunny_scene.json
prova_dr/dataset/classroom/: classroom.json
prova_dr/dataset/rotatedcube_17cams/: rotatedcube_17cams.json
prova_dr/dataset/rotatedcube_25cams/: rotatedcube_25cams.json
prova_dr/dataset/rotatedcube_2cams/: rotatedcube_2cams.json
prova_dr/dataset/rotatedcube_9cams/: rotatedcube_9cams.json
prova_dr/dataset/rotatedcube_9cams_64res/: rotatedcube_9cams_64res.json
prova_dr/dataset/sin_9cams/: sin_9cams.json
prova_dr/executables/: CMakeLists.txt  dataset_maker.cpp  main.cpp  test_mapping.cpp  test_synth.cpp  test_synth_cuda.cpp  test_synth_cuda0.cpp  test_tracking.cpp
prova_dr/scripts/: CMakeCache.txt  Makefile  build.sh  cmake_install.cmake  run.sh
prova_dr/scripts/executables/: Makefile  cmake_install.cmake  test_synth  test_synth_cuda
prova_dr/src/: camera.cpp  camera.h  cuda_handler.cu  cuda_handler.cuh  dataset.cpp  dataset.h  defs.h  dtam.cpp  dtam.h  dtam0.cpp  dtam_cuda.cpp  dtam_cuda.cu  dtam_cuda.cuh  dtam_cuda.h  environment.cpp  environment.h  image.cpp  image.h  renderer.cpp  renderer.h  state.cpp  state.h
prova_dr/src_cuda/: camera_cpu.cu  camera_cpu.cuh  camera_cuda.cu  camera_cuda.cuh  camera_gpu.cu  camera_gpu.cuh  cuda_handler.cu  cuda_handler.cuh  dtam_cuda.cu  dtam_cuda.cuh  dtam_cuda0.cu  dtam_cuda0.cuh  environment.cu  environment.cuh  mapper.cu  mapper.cuh  renderer.cu  renderer.cuh  tracker.cu  tracker.cuh
scripts/: build_pathtracer.sh  generate_dataset.sh  run_dtam.sh  run_pathtracer.sh
